Theorie des langages/projetSRC/build/parser.output
Terminals unused in grammar

    SI
    SINON
    FINSI
    POUR
    FINI
    POINT_VIRGULE


State 88 conflicts: 1 shift/reduce


Grammar

    0 $accept: programme $end

    1 programme: programme_element programme
    2          | ε

    3 programme_element: declaration
    4                  | bloc_element
    5                  | variable
    6                  | commentaire

    7 declaration: define
    8            | style
    9            | titrepage

   10 bloc_element: titre
   11             | sous_titre
   12             | paragraphe
   13             | image

   14 titre: TITRE attributs CHAINE
   15      | TITRE CHAINE

   16 sous_titre: SOUS_TITRE attributs CHAINE
   17           | SOUS_TITRE CHAINE

   18 paragraphe: PARAGRAPHE attributs CHAINE
   19           | PARAGRAPHE CHAINE

   20 image: IMAGE CHAINE

   21 commentaire: COMMENTAIRE

   22 attributs: CROCHET_OUVRANT liste_attributs CROCHET_FERMANT

   23 liste_attributs: attribut
   24                | attribut VIRGULE liste_attributs
   25                | attribut NEWLINE liste_attributs

   26 attribut: nomattribut DEUX_POINTS valeur
   27         | nomattribut DEUX_POINTS IDENTIFIANT

   28 nomattribut: LARGEUR
   29            | HAUTEUR
   30            | COULEURTEXTE
   31            | COULEURFOND
   32            | OPACITE

   33 valeur: ENTIER
   34       | HEX_COULEUR
   35       | RGB_COULEUR
   36       | CHAINE

   37 define: DEFINE PARENTHESE_OUVRANTE PROPRIETE PARENTHESE_FERMANTE ACCOLADE_OUVRANTE valeur ACCOLADE_FERMANTE

   38 titrepage: TITREPAGE CHAINE

   39 variable: IDENTIFIANT EGAL valeurvar
   40         | IDENTIFIANT EGAL selecteur
   41         | IDENTIFIANT POINT nomattribut EGAL valeur
   42         | IDENTIFIANT POINT nomattribut EGAL IDENTIFIANT
   43         | IDENTIFIANT POINT SELECTSTYLE EGAL IDENTIFIANT
   44         | IDENTIFIANT POINT SELECTSTYLE EGAL attributs

   45 selecteur: PARAGRAPHE index_expression
   46          | TITRE index_expression
   47          | SOUS_TITRE index_expression
   48          | IMAGE index_expression

   49 index_expression: CROCHET_OUVRANT IDENTIFIANT CROCHET_FERMANT
   50                 | CROCHET_OUVRANT expr CROCHET_FERMANT

   51 expr: expr PLUS terme
   52     | expr MOINS terme
   53     | terme

   54 terme: terme MULT facteur
   55      | terme DIV facteur
   56      | facteur

   57 facteur: ENTIER
   58        | IDENTIFIANT

   59 valeurvar: ENTIER
   60          | HEX_COULEUR
   61          | RGB_COULEUR
   62          | bloc_element
   63          | attributs

   64 style: STYLE PARENTHESE_OUVRANTE BLOCS PARENTHESE_FERMANTE ACCOLADE_OUVRANTE attributs ACCOLADE_FERMANTE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NEWLINE (258) 25
    TITRE <TitreInfo> (259) 14 15 46
    SOUS_TITRE <TitreInfo> (260) 16 17 47
    PARAGRAPHE (261) 18 19 45
    IMAGE (262) 20 48
    DEFINE (263) 37
    TITREPAGE (264) 38
    STYLE (265) 64
    SELECTSTYLE (266) 43 44
    PROPRIETE <std::string> (267) 37
    COMMENTAIRE <std::string> (268) 21
    SI <std::string> (269)
    SINON <std::string> (270)
    FINSI <std::string> (271)
    POUR <std::string> (272)
    FINI <std::string> (273)
    IDENTIFIANT <std::string> (274) 27 39 40 41 42 43 44 49 58
    BLOCS <std::string> (275) 64
    ENTIER <int> (276) 33 57 59
    CHAINE <std::string> (277) 14 15 16 17 18 19 20 36 38
    HEX_COULEUR <std::string> (278) 34 60
    RGB_COULEUR <std::string> (279) 35 61
    EGAL (280) 39 40 41 42 43 44
    CROCHET_FERMANT (281) 22 49 50
    CROCHET_OUVRANT (282) 22 49 50
    DEUX_POINTS (283) 26 27
    VIRGULE (284) 24
    POINT_VIRGULE (285)
    POINT (286) 41 42 43 44
    PLUS (287) 51
    MOINS (288) 52
    MULT (289) 54
    DIV (290) 55
    PARENTHESE_OUVRANTE (291) 37 64
    PARENTHESE_FERMANTE (292) 37 64
    ACCOLADE_OUVRANTE (293) 37 64
    ACCOLADE_FERMANTE (294) 37 64
    LARGEUR (295) 28
    HAUTEUR (296) 29
    COULEURTEXTE (297) 30
    COULEURFOND (298) 31
    OPACITE (299) 32


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    programme (46)
        on left: 1 2
        on right: 0 1
    programme_element (47)
        on left: 3 4 5 6
        on right: 1
    declaration (48)
        on left: 7 8 9
        on right: 3
    bloc_element <Bloc*> (49)
        on left: 10 11 12 13
        on right: 4 62
    titre <Bloc*> (50)
        on left: 14 15
        on right: 10
    sous_titre <Bloc*> (51)
        on left: 16 17
        on right: 11
    paragraphe <Bloc*> (52)
        on left: 18 19
        on right: 12
    image <Bloc*> (53)
        on left: 20
        on right: 13
    commentaire <Bloc*> (54)
        on left: 21
        on right: 6
    attributs <std::map<std::string, std::string>> (55)
        on left: 22
        on right: 14 16 18 44 63 64
    liste_attributs <std::map<std::string, std::string>> (56)
        on left: 23 24 25
        on right: 22 24 25
    attribut <std::map<std::string, std::string>> (57)
        on left: 26 27
        on right: 23 24 25
    nomattribut <std::string> (58)
        on left: 28 29 30 31 32
        on right: 26 27 41 42
    valeur <std::string> (59)
        on left: 33 34 35 36
        on right: 26 37 41
    define <std::string> (60)
        on left: 37
        on right: 7
    titrepage <Bloc*> (61)
        on left: 38
        on right: 9
    variable <std::variant<int, std::string, Bloc*, std::map<std::string, std::string>>> (62)
        on left: 39 40 41 42 43 44
        on right: 5
    selecteur <std::pair<std::string, int>> (63)
        on left: 45 46 47 48
        on right: 40
    index_expression <int> (64)
        on left: 49 50
        on right: 45 46 47 48
    expr <int> (65)
        on left: 51 52 53
        on right: 50 51 52
    terme <int> (66)
        on left: 54 55 56
        on right: 51 52 53 54 55
    facteur <int> (67)
        on left: 57 58
        on right: 54 55 56
    valeurvar <std::variant<int, std::string, Bloc*, std::map<std::string, std::string>>> (68)
        on left: 59 60 61 62 63
        on right: 39
    style <std::string> (69)
        on left: 64
        on right: 8


State 0

    0 $accept: • programme $end

    TITRE        shift, and go to state 1
    SOUS_TITRE   shift, and go to state 2
    PARAGRAPHE   shift, and go to state 3
    IMAGE        shift, and go to state 4
    DEFINE       shift, and go to state 5
    TITREPAGE    shift, and go to state 6
    STYLE        shift, and go to state 7
    COMMENTAIRE  shift, and go to state 8
    IDENTIFIANT  shift, and go to state 9

    $default  reduce using rule 2 (programme)

    programme          go to state 10
    programme_element  go to state 11
    declaration        go to state 12
    bloc_element       go to state 13
    titre              go to state 14
    sous_titre         go to state 15
    paragraphe         go to state 16
    image              go to state 17
    commentaire        go to state 18
    define             go to state 19
    titrepage          go to state 20
    variable           go to state 21
    style              go to state 22


State 1

   14 titre: TITRE • attributs CHAINE
   15      | TITRE • CHAINE

    CHAINE           shift, and go to state 23
    CROCHET_OUVRANT  shift, and go to state 24

    attributs  go to state 25


State 2

   16 sous_titre: SOUS_TITRE • attributs CHAINE
   17           | SOUS_TITRE • CHAINE

    CHAINE           shift, and go to state 26
    CROCHET_OUVRANT  shift, and go to state 24

    attributs  go to state 27


State 3

   18 paragraphe: PARAGRAPHE • attributs CHAINE
   19           | PARAGRAPHE • CHAINE

    CHAINE           shift, and go to state 28
    CROCHET_OUVRANT  shift, and go to state 24

    attributs  go to state 29


State 4

   20 image: IMAGE • CHAINE

    CHAINE  shift, and go to state 30


State 5

   37 define: DEFINE • PARENTHESE_OUVRANTE PROPRIETE PARENTHESE_FERMANTE ACCOLADE_OUVRANTE valeur ACCOLADE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 31


State 6

   38 titrepage: TITREPAGE • CHAINE

    CHAINE  shift, and go to state 32


State 7

   64 style: STYLE • PARENTHESE_OUVRANTE BLOCS PARENTHESE_FERMANTE ACCOLADE_OUVRANTE attributs ACCOLADE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 33


State 8

   21 commentaire: COMMENTAIRE •

    $default  reduce using rule 21 (commentaire)


State 9

   39 variable: IDENTIFIANT • EGAL valeurvar
   40         | IDENTIFIANT • EGAL selecteur
   41         | IDENTIFIANT • POINT nomattribut EGAL valeur
   42         | IDENTIFIANT • POINT nomattribut EGAL IDENTIFIANT
   43         | IDENTIFIANT • POINT SELECTSTYLE EGAL IDENTIFIANT
   44         | IDENTIFIANT • POINT SELECTSTYLE EGAL attributs

    EGAL   shift, and go to state 34
    POINT  shift, and go to state 35


State 10

    0 $accept: programme • $end

    $end  shift, and go to state 36


State 11

    1 programme: programme_element • programme

    TITRE        shift, and go to state 1
    SOUS_TITRE   shift, and go to state 2
    PARAGRAPHE   shift, and go to state 3
    IMAGE        shift, and go to state 4
    DEFINE       shift, and go to state 5
    TITREPAGE    shift, and go to state 6
    STYLE        shift, and go to state 7
    COMMENTAIRE  shift, and go to state 8
    IDENTIFIANT  shift, and go to state 9

    $default  reduce using rule 2 (programme)

    programme          go to state 37
    programme_element  go to state 11
    declaration        go to state 12
    bloc_element       go to state 13
    titre              go to state 14
    sous_titre         go to state 15
    paragraphe         go to state 16
    image              go to state 17
    commentaire        go to state 18
    define             go to state 19
    titrepage          go to state 20
    variable           go to state 21
    style              go to state 22


State 12

    3 programme_element: declaration •

    $default  reduce using rule 3 (programme_element)


State 13

    4 programme_element: bloc_element •

    $default  reduce using rule 4 (programme_element)


State 14

   10 bloc_element: titre •

    $default  reduce using rule 10 (bloc_element)


State 15

   11 bloc_element: sous_titre •

    $default  reduce using rule 11 (bloc_element)


State 16

   12 bloc_element: paragraphe •

    $default  reduce using rule 12 (bloc_element)


State 17

   13 bloc_element: image •

    $default  reduce using rule 13 (bloc_element)


State 18

    6 programme_element: commentaire •

    $default  reduce using rule 6 (programme_element)


State 19

    7 declaration: define •

    $default  reduce using rule 7 (declaration)


State 20

    9 declaration: titrepage •

    $default  reduce using rule 9 (declaration)


State 21

    5 programme_element: variable •

    $default  reduce using rule 5 (programme_element)


State 22

    8 declaration: style •

    $default  reduce using rule 8 (declaration)


State 23

   15 titre: TITRE CHAINE •

    $default  reduce using rule 15 (titre)


State 24

   22 attributs: CROCHET_OUVRANT • liste_attributs CROCHET_FERMANT

    LARGEUR       shift, and go to state 38
    HAUTEUR       shift, and go to state 39
    COULEURTEXTE  shift, and go to state 40
    COULEURFOND   shift, and go to state 41
    OPACITE       shift, and go to state 42

    liste_attributs  go to state 43
    attribut         go to state 44
    nomattribut      go to state 45


State 25

   14 titre: TITRE attributs • CHAINE

    CHAINE  shift, and go to state 46


State 26

   17 sous_titre: SOUS_TITRE CHAINE •

    $default  reduce using rule 17 (sous_titre)


State 27

   16 sous_titre: SOUS_TITRE attributs • CHAINE

    CHAINE  shift, and go to state 47


State 28

   19 paragraphe: PARAGRAPHE CHAINE •

    $default  reduce using rule 19 (paragraphe)


State 29

   18 paragraphe: PARAGRAPHE attributs • CHAINE

    CHAINE  shift, and go to state 48


State 30

   20 image: IMAGE CHAINE •

    $default  reduce using rule 20 (image)


State 31

   37 define: DEFINE PARENTHESE_OUVRANTE • PROPRIETE PARENTHESE_FERMANTE ACCOLADE_OUVRANTE valeur ACCOLADE_FERMANTE

    PROPRIETE  shift, and go to state 49


State 32

   38 titrepage: TITREPAGE CHAINE •

    $default  reduce using rule 38 (titrepage)


State 33

   64 style: STYLE PARENTHESE_OUVRANTE • BLOCS PARENTHESE_FERMANTE ACCOLADE_OUVRANTE attributs ACCOLADE_FERMANTE

    BLOCS  shift, and go to state 50


State 34

   39 variable: IDENTIFIANT EGAL • valeurvar
   40         | IDENTIFIANT EGAL • selecteur

    TITRE            shift, and go to state 51
    SOUS_TITRE       shift, and go to state 52
    PARAGRAPHE       shift, and go to state 53
    IMAGE            shift, and go to state 54
    ENTIER           shift, and go to state 55
    HEX_COULEUR      shift, and go to state 56
    RGB_COULEUR      shift, and go to state 57
    CROCHET_OUVRANT  shift, and go to state 24

    bloc_element  go to state 58
    titre         go to state 14
    sous_titre    go to state 15
    paragraphe    go to state 16
    image         go to state 17
    attributs     go to state 59
    selecteur     go to state 60
    valeurvar     go to state 61


State 35

   41 variable: IDENTIFIANT POINT • nomattribut EGAL valeur
   42         | IDENTIFIANT POINT • nomattribut EGAL IDENTIFIANT
   43         | IDENTIFIANT POINT • SELECTSTYLE EGAL IDENTIFIANT
   44         | IDENTIFIANT POINT • SELECTSTYLE EGAL attributs

    SELECTSTYLE   shift, and go to state 62
    LARGEUR       shift, and go to state 38
    HAUTEUR       shift, and go to state 39
    COULEURTEXTE  shift, and go to state 40
    COULEURFOND   shift, and go to state 41
    OPACITE       shift, and go to state 42

    nomattribut  go to state 63


State 36

    0 $accept: programme $end •

    $default  accept


State 37

    1 programme: programme_element programme •

    $default  reduce using rule 1 (programme)


State 38

   28 nomattribut: LARGEUR •

    $default  reduce using rule 28 (nomattribut)


State 39

   29 nomattribut: HAUTEUR •

    $default  reduce using rule 29 (nomattribut)


State 40

   30 nomattribut: COULEURTEXTE •

    $default  reduce using rule 30 (nomattribut)


State 41

   31 nomattribut: COULEURFOND •

    $default  reduce using rule 31 (nomattribut)


State 42

   32 nomattribut: OPACITE •

    $default  reduce using rule 32 (nomattribut)


State 43

   22 attributs: CROCHET_OUVRANT liste_attributs • CROCHET_FERMANT

    CROCHET_FERMANT  shift, and go to state 64


State 44

   23 liste_attributs: attribut •
   24                | attribut • VIRGULE liste_attributs
   25                | attribut • NEWLINE liste_attributs

    NEWLINE  shift, and go to state 65
    VIRGULE  shift, and go to state 66

    $default  reduce using rule 23 (liste_attributs)


State 45

   26 attribut: nomattribut • DEUX_POINTS valeur
   27         | nomattribut • DEUX_POINTS IDENTIFIANT

    DEUX_POINTS  shift, and go to state 67


State 46

   14 titre: TITRE attributs CHAINE •

    $default  reduce using rule 14 (titre)


State 47

   16 sous_titre: SOUS_TITRE attributs CHAINE •

    $default  reduce using rule 16 (sous_titre)


State 48

   18 paragraphe: PARAGRAPHE attributs CHAINE •

    $default  reduce using rule 18 (paragraphe)


State 49

   37 define: DEFINE PARENTHESE_OUVRANTE PROPRIETE • PARENTHESE_FERMANTE ACCOLADE_OUVRANTE valeur ACCOLADE_FERMANTE

    PARENTHESE_FERMANTE  shift, and go to state 68


State 50

   64 style: STYLE PARENTHESE_OUVRANTE BLOCS • PARENTHESE_FERMANTE ACCOLADE_OUVRANTE attributs ACCOLADE_FERMANTE

    PARENTHESE_FERMANTE  shift, and go to state 69


State 51

   14 titre: TITRE • attributs CHAINE
   15      | TITRE • CHAINE
   46 selecteur: TITRE • index_expression

    CHAINE           shift, and go to state 23
    CROCHET_OUVRANT  shift, and go to state 70

    attributs         go to state 25
    index_expression  go to state 71


State 52

   16 sous_titre: SOUS_TITRE • attributs CHAINE
   17           | SOUS_TITRE • CHAINE
   47 selecteur: SOUS_TITRE • index_expression

    CHAINE           shift, and go to state 26
    CROCHET_OUVRANT  shift, and go to state 70

    attributs         go to state 27
    index_expression  go to state 72


State 53

   18 paragraphe: PARAGRAPHE • attributs CHAINE
   19           | PARAGRAPHE • CHAINE
   45 selecteur: PARAGRAPHE • index_expression

    CHAINE           shift, and go to state 28
    CROCHET_OUVRANT  shift, and go to state 70

    attributs         go to state 29
    index_expression  go to state 73


State 54

   20 image: IMAGE • CHAINE
   48 selecteur: IMAGE • index_expression

    CHAINE           shift, and go to state 30
    CROCHET_OUVRANT  shift, and go to state 74

    index_expression  go to state 75


State 55

   59 valeurvar: ENTIER •

    $default  reduce using rule 59 (valeurvar)


State 56

   60 valeurvar: HEX_COULEUR •

    $default  reduce using rule 60 (valeurvar)


State 57

   61 valeurvar: RGB_COULEUR •

    $default  reduce using rule 61 (valeurvar)


State 58

   62 valeurvar: bloc_element •

    $default  reduce using rule 62 (valeurvar)


State 59

   63 valeurvar: attributs •

    $default  reduce using rule 63 (valeurvar)


State 60

   40 variable: IDENTIFIANT EGAL selecteur •

    $default  reduce using rule 40 (variable)


State 61

   39 variable: IDENTIFIANT EGAL valeurvar •

    $default  reduce using rule 39 (variable)


State 62

   43 variable: IDENTIFIANT POINT SELECTSTYLE • EGAL IDENTIFIANT
   44         | IDENTIFIANT POINT SELECTSTYLE • EGAL attributs

    EGAL  shift, and go to state 76


State 63

   41 variable: IDENTIFIANT POINT nomattribut • EGAL valeur
   42         | IDENTIFIANT POINT nomattribut • EGAL IDENTIFIANT

    EGAL  shift, and go to state 77


State 64

   22 attributs: CROCHET_OUVRANT liste_attributs CROCHET_FERMANT •

    $default  reduce using rule 22 (attributs)


State 65

   25 liste_attributs: attribut NEWLINE • liste_attributs

    LARGEUR       shift, and go to state 38
    HAUTEUR       shift, and go to state 39
    COULEURTEXTE  shift, and go to state 40
    COULEURFOND   shift, and go to state 41
    OPACITE       shift, and go to state 42

    liste_attributs  go to state 78
    attribut         go to state 44
    nomattribut      go to state 45


State 66

   24 liste_attributs: attribut VIRGULE • liste_attributs

    LARGEUR       shift, and go to state 38
    HAUTEUR       shift, and go to state 39
    COULEURTEXTE  shift, and go to state 40
    COULEURFOND   shift, and go to state 41
    OPACITE       shift, and go to state 42

    liste_attributs  go to state 79
    attribut         go to state 44
    nomattribut      go to state 45


State 67

   26 attribut: nomattribut DEUX_POINTS • valeur
   27         | nomattribut DEUX_POINTS • IDENTIFIANT

    IDENTIFIANT  shift, and go to state 80
    ENTIER       shift, and go to state 81
    CHAINE       shift, and go to state 82
    HEX_COULEUR  shift, and go to state 83
    RGB_COULEUR  shift, and go to state 84

    valeur  go to state 85


State 68

   37 define: DEFINE PARENTHESE_OUVRANTE PROPRIETE PARENTHESE_FERMANTE • ACCOLADE_OUVRANTE valeur ACCOLADE_FERMANTE

    ACCOLADE_OUVRANTE  shift, and go to state 86


State 69

   64 style: STYLE PARENTHESE_OUVRANTE BLOCS PARENTHESE_FERMANTE • ACCOLADE_OUVRANTE attributs ACCOLADE_FERMANTE

    ACCOLADE_OUVRANTE  shift, and go to state 87


State 70

   22 attributs: CROCHET_OUVRANT • liste_attributs CROCHET_FERMANT
   49 index_expression: CROCHET_OUVRANT • IDENTIFIANT CROCHET_FERMANT
   50                 | CROCHET_OUVRANT • expr CROCHET_FERMANT

    IDENTIFIANT   shift, and go to state 88
    ENTIER        shift, and go to state 89
    LARGEUR       shift, and go to state 38
    HAUTEUR       shift, and go to state 39
    COULEURTEXTE  shift, and go to state 40
    COULEURFOND   shift, and go to state 41
    OPACITE       shift, and go to state 42

    liste_attributs  go to state 43
    attribut         go to state 44
    nomattribut      go to state 45
    expr             go to state 90
    terme            go to state 91
    facteur          go to state 92


State 71

   46 selecteur: TITRE index_expression •

    $default  reduce using rule 46 (selecteur)


State 72

   47 selecteur: SOUS_TITRE index_expression •

    $default  reduce using rule 47 (selecteur)


State 73

   45 selecteur: PARAGRAPHE index_expression •

    $default  reduce using rule 45 (selecteur)


State 74
